<resources>
    <string name="app_name">ProjectName</string>
    <string name="search_button_text">Search</string>
    <string name="search_page_text">Search</string>
    <string name="textView_advanced_search_options">Advanced Search Options</string>
    <string-array name="advanced_search_options">
        <item>Choose an advanced search option...</item>
        <item>Region</item>
        <item>Branch</item>
        <item>Minimum Salary</item>
        <item>Experience</item>
    </string-array>
    <string name="search_hint">Enter search term</string>
    <string name="salary_hint">Enter salary</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="forgot_password_hint">Enter e-mail address</string>
    <string name="forgot_password_button_text">Reset Password</string>
    <string-array name="region_options">
        <item>Delhi</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Chennai</item>
        <item>Bengaluru</item>
        <item>Hyderabad</item>
        <item>Chandigarh</item>
        <item>Jaipur</item>
        <item>Dispur</item>
        <item>Itanagar</item>
        <item>Patna</item>
        <item>Raipur</item>
        <item>Jammu</item>
        <item>Shimla</item>
        <item>Dehradun</item>
        <item>Lucknow</item>
        <item>Bhopal</item>
        <item>Gandhi Nagar</item>
        <item>Panaji</item>
        <item>Tiruvananthapuram</item>
        <item>Bhubaneshwar</item>
        <item>Ranchi</item>
        <item>Gangtok</item>
        <item>Shillong</item>
        <item>Agartala</item>
        <item>Imphal</item>
        <item>Kohima</item>
        <item>Aizawal</item>
    </string-array>
    <string-array name="branch_options">
        <item>Computer Science</item>
        <item>Information Technology</item>
        <item>Electronics and Communication</item>
        <item>Electrical</item>
        <item>Electrical and Instrumentation </item>
        <item>Mechanical</item>
        <item>Civil Engineering</item>
        <item>Chemical</item>
        <item>Aeronautical</item>
        <item>Agricultural</item>
        <item>Mining engineering</item>
        <item>Biochemical</item>
        <item>Metallurgical</item>
    </string-array>
    <string-array name="experience_options">
        <item>Less than 1 year</item>
        <item>1-5 years</item>
        <item>5-10 years</item>
        <item>10+ years</item>
    </string-array>

    <string-array name="numbers">
        <item>Education Qualification</item>
        <item>10</item>
        <item>12</item>
        <item>Undergraduate</item>
        <item>Postgraduate</item>
        <item>Doctorate</item>
        <item>Diploma</item>
    </string-array>

    <string-array name="numbers2">
        <item>Location Preference</item>
        <item>Delhi</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Chennai</item>
        <item>Bengaluru</item>
        <item>Hyderabad</item>
        <item>Chandigarh</item>
        <item>Jaipur</item>
        <item>Dispur</item>
        <item>Itanagar</item>
        <item>Patna</item>
        <item>Raipur</item>
        <item>Jammu</item>

        <item>Shimla</item>


        <item>Dehradun</item>
        <item>Lucknow</item>
        <item>Bhopal</item>
        <item>Gandhi Nagar</item>

        <item>Panaji</item>

        <item>Tiruvananthapuram</item>

        <item>Bhubaneshwar</item>
        <item>Ranchi</item>

        <item>Gangtok</item>
        <item>Shillong</item>
        <item>Agartala</item>
        <item>Imphal</item>
        <item>Kohima</item>
        <item>Aizawal</item>
    </string-array>

    <string-array name="numbers3">
        <item>Specialisation</item>
        <item>Computer Science</item>
        <item>Information Technology</item>
        <item>Electronics and Communication</item>
        <item>Electrical</item>
        <item>Electrical and Instrumentation </item>
        <item>Mechanical</item>
        <item>Civil Engineering</item>
        <item>Chemical</item>
        <item>Aeronautical</item>
        <item>Agricultural</item>
        <item>Mining engineering</item>
        <item>Biochemical</item>

        <item>Metallurgical</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="register_btn">Don\'t have an account? Register now</string>
    <string name="forgot_btn">Forgot Password</string>
    <string name="action_password">Password</string>
    <string name="about_us">\nWe are a team of students from NITK developing and expanding an application for skilled yet jobless engineers to find their dream jobs as well as hone their skills for better opportunities in the future. The app also serves as a platform for employers to find skilled engineers and as a platform for training companies to get more students."
</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="title_activity_about__us">About_Us</string>
    <string name="faq_title">\tFrequently Asked \n\tQuestions</string>
    <string name="faq_question1">\n   Q. What kinds of jobs can I find here?</string>
    <string name="faq_question2">\n   Q. Can i change my profile information?</string>
    <string name="faq_answer1">\n  A. Jobs in any field of engineering ranging\n from information technology to aviation\n engineering can be found.\n</string>
    <string name="faq_answer2">\n   A. Yes, all information shown on the\n dashboard can be changed.</string>
    <string-array name="languages">
        <item>Select language</item>

        <item>हिंदी</item>
        <item>English</item>
    </string-array>

</resources>
